--- a/views/clientesVista.html
+++ b/views/clientesVista.html
@@ -24,6 +24,7 @@
         </tbody>
       </table>
     </div>
+
     <div class="col-lg-6">
       <form class="vendimiaForm" ng-init="infoCliente = {}">
         <div class="form-group">
@@ -45,6 +46,7 @@
         <div class="pull-right">
           <button type="submit" class="btn btn-default">Cancelar</button>
           <button type="submit" class="btn btn-default" ng-click="guardarCliente()">Guardar</button>
+          <label>Folio </label>
         </div>
       </from>
     </div>
