--- a/views/clientesVista.html
+++ b/views/clientesVista.html
@@ -2,31 +2,37 @@
   <div class="row">
     <div class="col-lg-3"><h4>Clientes Registrados</h4></div>
     <div class="col-lg-9 ">
-      <button type="button" class="btn btn-primary btn-lg pull-right">
+      <button type="button" class="btn btn-primary btn-lg pull-right" ng-click="llenarClienteNuevo()">
         <span class="glyphicon glyphicon-plus"></span> Agregar Clientes
       </button>
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-6">
-      <table class="table table-hover">
+    <div class="col-lg-12 clientesTable" ng-class="{'col-lg-6':form}">
+      <table class="table table-hover" ng-init="traerClientes()">
         <thead>
           <tr>
             <th width="20%">Clave Cliente</th>
-            <th width="80%">Nombre</th>
+            <th width="70%">Nombre</th>
+            <th width="10%"></th>
           </tr>
         </thead>
-          <tr ng-repeat ="cliente in clientes">
+          <tr ng-repeat ="cliente in clientes" ng-model="clientes">
             <td>{{cliente.id_cliente}}</td>
             <td>{{cliente.nom_cliente}}</td>
+            <td><button ng-click="llenarCliente(cliente);" class="btn btn-default"><span class="glyphicon glyphicon-edit" ></span></button></td>
           </tr>
         <tbody>
         </tbody>
       </table>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6" ng-hide="!form">
       <form class="vendimiaForm" ng-init="infoCliente = {}">
+
+        <div class="form-group text-center">
+          <h3>Clave: {{folio}}</h3>
+        </div>
         <div class="form-group">
           <label>Nombre</label>
           <input type="text" maxlength="50" class="form-control" ng-model="infoCliente.nomCliente"  placeholder="Nombre">
@@ -44,9 +50,9 @@
           <input type="text" maxlength="13" class="form-control" ng-model="infoCliente.rfc" placeholder="RFC">
         </div>
         <div class="pull-right">
-          <button type="submit" class="btn btn-default">Cancelar</button>
-          <button type="submit" class="btn btn-default" ng-click="guardarCliente()">Guardar</button>
-          <label>Folio </label>
+          <button type="submit" class="btn btn-default" ng-click="form=false">Cancelar</button>
+          <button type="submit" class="btn btn-default" ng-click="guardarCliente()"  ng-hide="editar">Guardar</button>
+          <button type="submit" class="btn btn-default" ng-click="editarCliente()" ng-show="editar">Editar</button>
         </div>
       </from>
     </div>
