--- a/views/clientesVista.html
+++ b/views/clientesVista.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-12 clientesTable" ng-class="{'col-lg-6':form}">
+    <div class="col-lg-12 tablaPrincipal" ng-class="{'col-lg-6':form,tablaPrincipalLeftScroll:form}">
       <table class="table table-hover" ng-init="traerClientes()">
         <thead>
           <tr>
@@ -35,11 +35,11 @@
         </div>
         <div class="form-group">
           <label>Nombre</label>
-          <input type="text" maxlength="50" class="form-control" ng-model="infoCliente.nomCliente"  placeholder="Nombre">
+          <input type="text" maxlength="50" class="form-control" required ng-model="infoCliente.nomCliente"  placeholder="Nombre">
         </div>
         <div class="form-group">
           <label>Apellido Paterno</label>
-          <input type="text" maxlength="50" class="form-control" ng-model="infoCliente.apellidoP" placeholder="Apellido Paterno">
+          <input type="text" maxlength="50" class="form-control" required ng-model="infoCliente.apellidoP" placeholder="Apellido Paterno">
         </div>
         <div class="form-group">
           <label>Apellido Materno</label>
@@ -47,7 +47,7 @@
         </div>
         <div class="form-group">
           <label>RFC</label>
-          <input type="text" maxlength="13" class="form-control" ng-model="infoCliente.rfc" placeholder="RFC">
+          <input type="text" maxlength="13" class="form-control" required ng-model="infoCliente.rfc" placeholder="RFC">
         </div>
         <div class="pull-right">
           <button type="submit" class="btn btn-default" ng-click="form=false">Cancelar</button>
