--- a/views/ventasVista.html
+++ b/views/ventasVista.html
@@ -26,7 +26,7 @@
             <td>{{venta.nom_cliente}}</td>
             <td>{{venta.total_venta}}</td>
             <td>{{venta.fec_registrada}}</td>
-            <td>{{venta.estatus}}</td>
+            <td><span ng-show="venta.estatus" class="glyphicon glyphicon-ok"></span></td>
           </tr>
         <tbody>
         </tbody>
